lots of new changes in notes